--- a/PetrovGeorge-KT-43-21/appsettings.Development.json
+++ b/PetrovGeorge-KT-43-21/appsettings.Development.json
@@ -1,4 +1,4 @@
-{
+/*{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,3 +6,29 @@
     }
   }
 }
+*/
+{
+  "NLog": {
+    "internalLogLevel": "Info",
+    "internalLogFile": "C:\\Users\\g-petrov\\source\\repos\\internal-nlog.txt",
+    "extensions": [
+      { "assembly": "NLog.Extensions.Logging" },
+      { "assembly": "NLog.Web.AspNetCore" }
+    ],
+    "targets": {
+      "my-file": {
+        "type": "File",
+        "fileName": "C:\\Users\\g-petrov\\source\\repos\\logfile-${shortdate}.log",
+        "layout": "${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}"
+      }
+    },
+    "rules": [
+      {
+        "logger": "*",
+        "minLevel": "Error",
+        "writeTo": "my-file"
+      }
+    ]
+  }
+}
+
