add dbcontext and CreateDatabase migration

--- a/PetrovGeorge-KT-43-21/appsettings.Development.json
+++ b/PetrovGeorge-KT-43-21/appsettings.Development.json
@@ -29,6 +29,9 @@
         "writeTo": "my-file"
       }
     ]
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=alkona-nb002\\petrov;database=Student;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
 }
 
